fix: add z-index to brand name and adjust col width

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,7 +18,6 @@
   }
 
 /* General */
-
 h1,
 h2,
 h3,
@@ -43,25 +42,6 @@ main {
     width: 100vw;
 }
 
-header {
-    overflow: hidden;
-    background-color: var(--background);
-    padding-bottom: 20px;
-    position: fixed;
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
-    min-height: 10vh;
-    z-index: 99999999;
-}
-
-.profile-menu {
-    z-index: 99999999;
-    max-width: 100vw;
-    position: fixed;
-    top: 15px;
-    right: 70px;
-}
-
 .text-link {
     color: var(--highlight-clay);
 }
@@ -74,8 +54,31 @@ header {
     color:#860d09 !important;
 }
 
-/* Footer */
+/* Header */
+header {
+    overflow: hidden;
+    background-color: var(--background);
+    padding-bottom: 20px;
+    position: fixed;
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+    min-height: 10vh;
+    z-index: 99999999;
+}
 
+.brand-name-link {
+    z-index: 999999999;
+}
+
+.profile-menu {
+    z-index: 99999999;
+    max-width: 100vw;
+    position: fixed;
+    top: 15px;
+    right: 70px;
+}
+
+/* Footer */
 .footer {
     background-color: var(--background);
 }
@@ -135,7 +138,6 @@ header {
 }
 
 /* Bootstrap toasts */
-
 .message-container {
     max-width: 100vw;
     position: fixed;
@@ -205,7 +207,6 @@ header {
 }
 
 /* Home page */
-
 .jumbotron {
     background: url('/media/woollen-blanket.webp') no-repeat center center/cover;
     height: 80vh;
@@ -256,7 +257,6 @@ header {
 
 
 /* Products */
-
 .products-container {
     height: 600px;
     margin: 0;
@@ -341,7 +341,6 @@ header {
 }
 
 /* Containers */
-
 .login-container,
 .edit-container,
 .coupon-container,
@@ -354,7 +353,6 @@ header {
 }
 
 /* 404 page */
-
 .sheep-404 {
     max-width: 100vw;
 }
